--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HelloWorld</title>
     <script type="text/javascript" src="enchant.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="skating-bear.js"></script>
 </head>
 <body>
 
