--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>HelloWorld</title>
+    <meta name="viewport" content="width=device-width, user-scalable = no">
+    <meta name = "apple-mobile-web-app-capable" content = "yes">
+    <meta name = "apple-mobile-web-app-status-bar-style" content = "black-translucent">
+    <style type="text/css">body{
+    margin:0;}</style>
+    <title>skating Bear</title>
     <script type="text/javascript" src="enchant.js"></script>
     <script type="text/javascript" src="skating-bear.js"></script>
 </head>
